RESOLVED FIXED312906
[Site Isolation] SessionStorage message from cross-site frame fails site validation for site being empty
https://bugs.webkit.org/show_bug.cgi?id=312906
Summary [Site Isolation] SessionStorage message from cross-site frame fails site vali...
Sihui Liu
Reported 2026-04-21 09:55:27 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-21 09:58:34 PDT
Sihui Liu
Comment 2 2026-04-21 10:01:57 PDT
Ryan Haddad
Comment 3 2026-04-28 16:29:40 PDT
Note You need to log in before you can comment on or make changes to this bug.